--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "name": "nba-muse",
   "version": "1.0.0",
+  "private": true,
   "description": "NBA stats explorer",
   "main": "index.js",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
 
-
-"scripts": {
-  "dev": "tsx src/scripts/dev-check.ts",
-  "etl": "tsx src/scripts/etl.ts",
-  "query": "tsx src/scripts/query.ts",
-  "serve": "tsx src/scripts/server.ts"      
-},
-
-  "keywords": [],
-  "author": "Henry Nguyen",
-  "license": "ISC",
+    "etl": "tsx src/scripts/etl.ts",
+    "query": "tsx src/scripts/query.ts",
+    "serve": "tsx src/scripts/server.ts",
+    "check": "tsx src/scripts/dev-check.ts"
+  },
   "dependencies": {
     "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
     "duckdb": "^1.3.2",
     "express": "^5.1.0",
+    "next": "^15.5.3",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "zod": "^4.1.5"
   },
   "devDependencies": {
@@ -29,5 +31,8 @@
     "@types/node": "^24.3.1",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
+  },
+  "engines": {
+    "node": ">=18.17"
   }
 }
