--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,17 @@
 {
   "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "dist",
-
-    "module": "CommonJS",
-    "target": "ES2022",
-    "lib": ["ES2022"],
-    "moduleResolution": "Node",
-    "types": ["node"],
-
+    "target": "ES2020",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "jsx": "preserve",
     "strict": true,
-    "skipLibCheck": true,
+    "noEmit": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-
-    "sourceMap": true,
-
-    "declaration": false,
-    "declarationMap": false
-  }
+    "isolatedModules": true,
+    "baseUrl": "."
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
