--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-
     "etl": "tsx src/scripts/etl.ts",
     "query": "tsx src/scripts/query.ts",
     "serve": "tsx src/scripts/server.ts",
@@ -29,6 +28,8 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.1",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   },
