--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "check": "tsx src/scripts/dev-check.ts"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
     "duckdb": "^1.3.2",
